--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>signal-hunt-platform</artifactId>
-    <groupId>io.signals</groupId>
+    <artifactId>signal-hound-platform</artifactId>
+    <groupId>io.signalhound</groupId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
