lots of changes

--- a/admin-backend/pom.xml
+++ b/admin-backend/pom.xml
@@ -12,7 +12,21 @@
     <artifactId>admin-backend</artifactId>
     <packaging>jar</packaging>
 
+    <properties>
+        <swagger.version>2.2.9</swagger.version>
+    </properties>
+
     <dependencies>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-models</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-core</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
